Geometry, Shapefile : add scale decimator, some cleaning in shapefile